--- a/front_end/front_end/index.html
+++ b/front_end/front_end/index.html
@@ -9,8 +9,21 @@
 </head>
 
 <body>
+
+
     <div id="app"></div>
+    <!-- <img src="./static/background.jpg" alt=""> -->
     <!-- built files will be auto injected -->
+    <style>
+        #app {
+            z-index: 1;
+        }
+        
+        img {
+            z-index: -2;
+            width: 100%
+        }
+    </style>
 </body>
 
 </html>
