--- a/front_end/front_end/index.html
+++ b/front_end/front_end/index.html
@@ -5,11 +5,10 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
-    <title>front_end</title>
+    <title>学生信息管理系统</title>
 </head>
 
 <body>
-
 
     <div id="app"></div>
     <!-- <img src="./static/background.jpg" alt=""> -->
